/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-11-30 03:10 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/thread.c
    + added HB_GETCURRENTPROCESSID returns ID of current process

  * source/vm/macro.c
    ! macro string size increased to 8192

2012-11-26 17:43 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  - contrib/what32/*.*
  * winmake/mdir.bat
  * winmake/common.mak
  * winmake/compile.mak
  * winmake/makefile.bc
  * winmake/makefile.dc
  * winmake/makefile.gc
  * winmake/makefile.pc
  * winmake/makefile.vc
  * winmake/makefile.wc
  * winmake/common2.mak
  * winmake/common3.mak
    ! remove dubious contribs

2012-11-26 07:52 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/consmt.c
    ! removed not-needed function protoypes/declarations

2012-11-26 06:40 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/fm.c
    ! pacify BCC warnings when HB_NO_VM_ALL is defined

  * include/thread.h
  * source/rtl/arc4.c          
  * source/rtl/console.c        
  * source/rtl/hbsocket.c      
  * source/rtl/hbserv.c        
  * source/rtl/filenet.c       
  * source/rtl/trace.c         
  * source/rtl/filebuf.c       
  * source/rdd/hsx/hsx.c       
  * source/macro/macro.y       
  * source/macro/macroyy.c     
  * source/vm/thread.c         
  + source/vm/consmt.c         
  + source/vm/hbservmt.c       
  + source/vm/rddmt.c          
    ! reorganize MT lock and unlock functions by moving them to more appropriate
    files.

2012-11-25 07:43 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/macro/macro.y
    ! left over: HB_MACRO_PTR -> PHB_MACRO

2012-11-24 20:09 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/teditor.prg
    ! wrapped words were cut off when formatting, fixed.
